--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2752,22 +2752,22 @@
     "# Add VWC_Winter_whole to the secondary y-axis\n",
     "fig.add_trace(go.Scatter(x=mean_data_by_year['year'], y=mean_data_by_year['VWC_Winter_whole'], \n",
     "                         mode='lines', name='VWC_Winter_whole', \n",
-    "                         line=dict(color=color_mapping['NonDrySWA_Summer_whole']), visible='legendonly', yaxis = 'y2'))\n",
+    "                         line=dict(color=color_mapping['VWC_Winter_whole']), visible='legendonly', yaxis = 'y2'))\n",
     "\n",
     "# Add VWC_Spring_whole to the secondary y-axis\n",
     "fig.add_trace(go.Scatter(x=mean_data_by_year['year'], y=mean_data_by_year['VWC_Spring_whole'], \n",
     "                         mode='lines', name='VWC_Spring_whole', \n",
-    "                         line=dict(color=color_mapping['NonDrySWA_Summer_whole']), visible='legendonly', yaxis = 'y2'))\n",
+    "                         line=dict(color=color_mapping['VWC_Spring_whole']), visible='legendonly', yaxis = 'y2'))\n",
     "\n",
     "# Add VWC_Summer_whole to the secondary y-axis\n",
     "fig.add_trace(go.Scatter(x=mean_data_by_year['year'], y=mean_data_by_year['VWC_Summer_whole'], \n",
     "                         mode='lines', name='VWC_Summer_whole', \n",
-    "                         line=dict(color=color_mapping['NonDrySWA_Summer_whole']), visible='legendonly', yaxis = 'y2'))\n",
+    "                         line=dict(color=color_mapping['VWC_Summer_whole']), visible='legendonly', yaxis = 'y2'))\n",
     "\n",
     "# Add VWC_Fall_whole to the secondary y-axis\n",
     "fig.add_trace(go.Scatter(x=mean_data_by_year['year'], y=mean_data_by_year['VWC_Fall_whole'], \n",
     "                         mode='lines', name='VWC_Fall_whole', \n",
-    "                         line=dict(color=color_mapping['NonDrySWA_Summer_whole']), visible='legendonly', yaxis = 'y2'))\n",
+    "                         line=dict(color=color_mapping['VWC_Fall_whole']), visible='legendonly', yaxis = 'y2'))\n",
     "\n",
     "# Update the layout to include secondary y-axis\n",
     "fig.update_layout(\n",
@@ -2775,7 +2775,7 @@
     "    xaxis=dict(title='Year', showgrid=False),\n",
     "    yaxis=dict(title='m^3', showgrid=False),\n",
     "    yaxis2=dict(title='cm', showgrid=False, overlaying='y', side='right'),\n",
-    "    legend=dict(x=1.05, y=1, xanchor='left', yanchor='top', bgcolor='rgba(255, 255, 255, 0.5)', bordercolor='black', borderwidth=1),\n",
+    "    legend=dict(x=1.10, y=1, xanchor='left', yanchor='top', bgcolor='rgba(255, 255, 255, 0.5)', bordercolor='black', borderwidth=1),\n",
     "    hovermode='x unified',\n",
     "    plot_bgcolor='rgba(200, 182, 193, 0.3)'\n",
     ")\n",
